--- a/templates/image.html
+++ b/templates/image.html
@@ -128,7 +128,7 @@
                         library. OpenCV was built to provide a common infrastructure for computer vision applications
                         and to accelerate the use of machine perception in commercial products.<sup id="cite_ref-2"
                             class="reference"><a href="https://opencv.org/about">[3]</a></sup>
-                        <a href src="https://docs.opencv.org/master/">OpenCV documentation can be found here.</a>
+                        <a href="https://docs.opencv.org/master/">OpenCV documentation can be found here.</a>
                     </p>
 
                 </div>
