--- a/templates/model2.html
+++ b/templates/model2.html
@@ -69,12 +69,16 @@
         </div>
         <div class="col-lg-12 text-left">
           <p>
-              Our model consists of an input layer, 5 hidden layers and a dense layer. The figure below shows the structure of the model.
+              Our model consists of an input layer, 5 hidden layers and a dense layer. The figure below shows the structure of the model,
+              a more detailed diagram of the model can be found <a href="../static/images/model.png">here</a>.
+              Often the hidden layers of a CNN consist of <a href="../static/images/conv_process.png">3 operations</a>; Convolution, Activation and Pooling.
+              Due to overfitting issues we also added Dropout to each hidden layer of our model.
           </p>
+
           <img src="../static/images/model_diagram.png" height="400" alt="">
           <br><br>
           <p>
-            Each hidden layer consists of 4 operations:
+
             <ul>
                 <li><a href="../static/images/convolution-example-matrix.gif">Convolution: </a>Convolution is the
                      dot product between a filter array and a portion of input the image. The operation is repeated
@@ -108,15 +112,19 @@
             </p>
         </div>
           <div class="col-lg-12 text-center">
-                <h3 class="section-subheading text-muted">Training</h3>
+                <h3 class="section-subheading text-muted">Data & Training</h3>
                 <br>
          </div>
          <div class="col-lg-12 text-left">
           <p>
               <ul>
                   <li>
-                      We used 85% training and 15% test split to train our model. 
+                      Our data set consisted of ######## images. We used 85% of the images for training and 15% testing. 
                   </li>
+                  <li>
+                      We used sklearn to calculate a class weight for each of the five categories, since the number
+                      of images in the data set was different for each category. 
+                </li>
                   <li>
                       We used image augmentation during the training process. Some of the training images
                       were randomly flipped either horizontaly or verticaly, therefore the set of training
@@ -140,7 +148,7 @@
 
 
 
-              <br><br><br><br><br>
+              <br><br><br>
 
               <div class="row"> 
                     <div class="column">
@@ -148,7 +156,7 @@
                       <img src="../static/images/loss.png" height="350" alt="">
                     </div>
               </div>
-              <br><br><br><br><br>
+              <br><br><br>
               <div class="row"> 
                     <div class="column">
                       <!-- <img src="../static/images/cm.png" height="425" alt=""> -->
@@ -162,13 +170,16 @@
                   <h3>Metrics Summary</h3>
                     <ul>
                         <li>
-                            Accuracy: 0.752 
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">Accuracy: </a>0.752 
                         </li>
                         <li>
-                            F1 score: 0.745
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">Loss: </a>0.626 
+                        </li>                        
+                        <li>
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">F1 score: </a>0.745
                         </li>
                         <li>
-                            Kappa: 0.818
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">Kappa: </a>0.818
                         </li>
                     </ul>
                 </p>
