--- a/templates/model.html
+++ b/templates/model.html
@@ -6,18 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blindness Detection App</title>
-  <link rel="shortcut icon" href="../static/images/DR_Logo.png" />
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css">
   <!-- Main HTML Style CSS-->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
-<<<<<<< HEAD
 <body>
   <!-- navbar -->
   <nav id="navbar">
@@ -26,63 +20,33 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-=======
-<body onload="load()">
-  <!------------ navbar ---------->
-  <header class="navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row bd-navbar">
-    <a class="navbar-brand" href="/">
-      <img src="../static/images/DR_Logo.png" alt="logo" style="width:60px; height:60px">
-    </a>
-    <div class="navbar-nav-scroll">
-      <ul class="navbar-nav bd-navbar-nav flex-row">
->>>>>>> ccfaac0c5961e72354544c41cbbd83db15757926
         <li class="nav-item">
-          <a class="nav-link active" href="/"
-            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Blindness Detection App</a>
+          <a class="nav-link" target="#" href="">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " href="/Prevalence_Facts"
-            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Prevalence Facts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="/Image_Processing"
-            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Image
-            Processing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="/Model"
-            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Model</a>
+        <li class="menu">
+          <a target="#_blank" href="https://github.com/velmavasquez/Blindness-Detection-App" style="padding-right:20px">
+            <img width=40px height=40px src="../static/images/Github-Logo-lg.svg">
+          </a>
         </li>
       </ul>
     </div>
-
-    <ul class="nav navbar-nav navbar-right flex-row ml-md-auto d-none d-md-flex">
-      <li class="menu">
-        <a target="#_blank" href="https://github.com/velmavasquez/Blindness-Detection-App" style="padding-right:20px">
-          <img width=60px height=60px src="../static/images/Github-Logo-white.svg">
-        </a>
-      </li>
-    </ul>
-  </header>
-
-
+  </nav>
   <!-- jumbotron & intro -->
-
-  <div class="jumbotron text-center">
-    <div class="overlay"></div>
-    <div class="inner">
-      <h1><span>Classification of Diabetic Retinopathy Severity </span></h1>
-      <h3 class="h3-white"> Detect blindness before it happens</h3>
+  <div class="row">
+    <div class="jumbotron text-center">
+      <div class="overlay"></div>
+      <div class="inner">
+        <h1><span>Classification of Diabetic Retinopathy Severity </span></h1>
+        <h3 class="h3-white"> Detect blindness before it happens</h3>
+      </div>
     </div>
   </div>
-
   <!-- Navigation -->
   <section id="services">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h3 style="color: Black" class="section-heading text-uppercase">Classification Model</h3>
-<<<<<<< HEAD
           <h3 class="section-subheading text-muted">Convolutional Neural Network <sup id="cite_ref-2" class="reference"><a href="https://www.mathworks.com/solutions/deep-learning/convolutional-neural-network.html">[1]</a></sup></h3>
 
         <div class="col-lg-12 text-left">
@@ -105,12 +69,16 @@
         </div>
         <div class="col-lg-12 text-left">
           <p>
-              Our model consists of an input layer, 5 hidden layers and a dense layer. The figure below shows the structure of the model.
+              Our model consists of an input layer, 5 hidden layers and a dense layer. The figure below shows the structure of the model,
+              a more detailed diagram of the model can be found <a href="../static/images/model.png">here</a>.
+              Often the hidden layers of a CNN consist of <a href="../static/images/conv_process.png">3 operations</a>; Convolution, Activation and Pooling.
+              Due to overfitting issues we also added Dropout to each hidden layer of our model.
           </p>
+
           <img src="../static/images/model_diagram.png" height="400" alt="">
           <br><br>
           <p>
-            Each hidden layer consists of 4 operations:
+
             <ul>
                 <li><a href="../static/images/convolution-example-matrix.gif">Convolution: </a>Convolution is the
                      dot product between a filter array and a portion of input the image. The operation is repeated
@@ -140,57 +108,23 @@
 
 
 
-=======
-          <h3 class="section-subheading text-muted">Convolutional Neural Network</h3>
-          <!-- <br>
-          <img src="images/retinopathy.jpeg" alt="">
-        </div> -->
-          <div class="col-lg-12 text-left">
-            <p>We use a convolutional neural network (CNN) for the classification of retina the images into 5
-              categories. CNN is a machine learning method often used for image classification.
-              WHY?????
-            </p>
-            <br>
-          </div>
-          <div class="col-lg-12 text-center">
-            <h3 class="section-subheading text-muted">Model Structure</h3>
-            <br>
-          </div>
-          <div class="col-lg-12 text-left">
-            <p>
-              Our model consists of an input layer, 5 hidden layers and a dense layer. The figure below shows the
-              structure of the model.
-            </p>
-            <img src="images/model_diagram.png" height="400" alt="">
-            <br><br>
-            <p>
-              Each hidden layer consists of 4 operations:
-              <ul>
-                <li>Convolution</li>
-                <li>Activation</li>
-                <li><a href="images/MaxpoolSample2.png">MaxPooling: </a>Max pooling is a sample-based discretization
-                  process. The objective is to down-sample an input representation (image, hidden-layer output matrix,
-                  etc.), reducing its dimensionality and allowing for assumptions to be made about features contained in
-                  the sub-regions binned.
-                  <sup id="cite_ref-2" class="reference"><a
-                      href="https://computersciencewiki.org/index.php/Max-pooling_/_Pooling">[2]</a></sup></p>
-            </li>
-            <li>Dropout</li>
->>>>>>> ccfaac0c5961e72354544c41cbbd83db15757926
             </ul>
             </p>
-          </div>
+        </div>
           <div class="col-lg-12 text-center">
-<<<<<<< HEAD
-                <h3 class="section-subheading text-muted">Training</h3>
+                <h3 class="section-subheading text-muted">Data & Training</h3>
                 <br>
          </div>
          <div class="col-lg-12 text-left">
           <p>
               <ul>
                   <li>
-                      We used 85% training and 15% test split to train our model. 
+                      Our data set consisted of ######## images. We used 85% of the images for training and 15% testing. 
                   </li>
+                  <li>
+                      We used sklearn to calculate a class weight for each of the five categories, since the number
+                      of images in the data set was different for each category. 
+                </li>
                   <li>
                       We used image augmentation during the training process. Some of the training images
                       were randomly flipped either horizontaly or verticaly, therefore the set of training
@@ -214,7 +148,7 @@
 
 
 
-              <br><br><br><br><br>
+              <br><br><br>
 
               <div class="row"> 
                     <div class="column">
@@ -222,7 +156,7 @@
                       <img src="../static/images/loss.png" height="350" alt="">
                     </div>
               </div>
-              <br><br><br><br><br>
+              <br><br><br>
               <div class="row"> 
                     <div class="column">
                       <!-- <img src="../static/images/cm.png" height="425" alt=""> -->
@@ -236,13 +170,16 @@
                   <h3>Metrics Summary</h3>
                     <ul>
                         <li>
-                            Accuracy: 0.75 
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">Accuracy: </a>0.752 
                         </li>
                         <li>
-                            F1 score: 0.75
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">Loss: </a>0.626 
+                        </li>                        
+                        <li>
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">F1 score: </a>0.745
                         </li>
                         <li>
-                            Kappa: 0.75
+                          <a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">Kappa: </a>0.818
                         </li>
                     </ul>
                 </p>
@@ -274,48 +211,16 @@
         </div>
       </div>
 
-=======
-            <h3 class="section-subheading text-muted">Training</h3>
-            <br>
-          </div>
-          <div class="col-lg-12 text-left">
-            <p>
-              #####
-            </p>
-
-          </div>
-
-          <div class="col-lg-12 text-center">
-            <h3 class="section-subheading text-muted">Results</h3>
-            <br>
-          </div>
-
-
-          <div class="col-lg-12 text-left">
-            <p>
-              ##################.
-            </p>
-            <img src="images/accuracy.png" height="300" alt="">
-
-            <img src="images/loss.png" height="300" alt="">
-            <br>
-
-            <img src="images/cm.png" height="400" alt="">
-
-            <img src="images/norm_cm.png" height="400" alt="">
-          </div>
->>>>>>> ccfaac0c5961e72354544c41cbbd83db15757926
 
 
 
 
-
-
-        </div>
-        <br>
-        <br>
 
       </div>
+      <br>
+      <br>
+
+    </div>
   </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
