--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blindness Detection App</title>
   <link rel="shortcut icon" href="../static/images/DR_Logo.png" />
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
   <!-- Main HTML Style CSS-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
@@ -102,6 +98,7 @@
         <br><br>
         <div class="col-md-1"></div>
         <div class="col-md-3">
+          <br>
           <div id="custom-table">
             <p class="table-header">Predictions</p>
             <p><b>No DR: </b><span id="no-prediction"></span></p>
