added blurred images; removed unnecessary images

--- a/templates/image.html
+++ b/templates/image.html
@@ -178,10 +178,11 @@
                     </p>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img src="../static/images/blurred_images.png" alt="">
-                    <br>
+                    <img src="../static/images/blurred.png" alt="">
                 </div>
-
+                <div class="col-lg-12 text-center">
+                    <img src="../static/images/blurred_resize.png" alt="">
+                </div>
             </div>
             <br>
         </div>
@@ -202,7 +203,6 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-12 text-left">
-                                <br><br><br>
                                 <p>Gaussian distribution (also known as normal distribution) is a bell-shaped curve, and
                                     it is assumed that during any measurement values will follow a normal distribution
                                     with an equal number of measurements above and below the mean value.</p>
