--- a/templates/image.html
+++ b/templates/image.html
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css"> -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
@@ -110,7 +110,7 @@
                     <br>
                 </div>
                 <br>
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-left">
                     <h3 class="section-subheading text-muted">OpenCV library</h3>
                     <br>
                 </div>
@@ -128,7 +128,7 @@
 
                 </div>
                 <br>
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-left">
                     <br>
                     <h3 class="section-subheading text-muted">Color</h3>
                     <br>
@@ -146,7 +146,7 @@
                     <br>
                 </div>
                 <br>
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-left">
                     <br>
                     <h3 class="section-subheading text-muted">Cropping</h3>
                     <br>
@@ -162,7 +162,7 @@
                     <br>
                 </div>
                 <br>
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-left">
                     <br>
                     <h3 class="section-subheading text-muted">Blurring</h3>
                     <br>
@@ -176,9 +176,6 @@
                         effective in removing Gaussian noise from the image. <sup id="cite_ref-2"
                         class="reference"><a href="https://www.tutorialkart.com/opencv/python/opencv-python-gaussian-image-smoothing/">[4]</a></sup>
                     </p>
-                </div>
-                <div class="col-lg-12 text-center">
-                    <img src="../static/images/blurred.png" alt="">
                 </div>
                 <div class="col-lg-12 text-center">
                     <img src="../static/images/blurred_resize.png" alt="">
@@ -232,9 +229,9 @@
 
 
     <!-- java script libraries -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
+    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/3.0.3/dc.min.js"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
