--- a/templates/image.html
+++ b/templates/image.html
@@ -8,11 +8,14 @@
     <title>Image Processing</title>
     <link rel="shortcut icon" href="../static/images/DR_Logo.png" />
     <!-- Style Sheets-->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -55,7 +58,6 @@
     </header>
 
     <!-- jumbotron & intro -->
-
     <div class="jumbotron jumbotron-fluid text-center">
         <div class="overlay"></div>
         <div class="inner">
@@ -71,21 +73,18 @@
                 <div class="col-lg-12 text-center">
                     <br>
                     <h3 style="color: Black" class="section-heading text-uppercase">Image Processing</h3>
-
+                    <br>
                     <div class="col-lg-12 text-left">
                         <h3 class="section-subheading text-muted">OpenCV library</h3>
                         <br>
                     </div>
                     <div class="col-lg-12 text-left">
-                        <p>We utilize image processing to manipulate the pictures in order to extract some useful
-                            information
-                            from them. We can reduce noises as well as control the brightness and color contrast. OpenCV
-                            (Open Source
-                            Computer Vision Library) is an open source computer vision and machine learning software
-                            library. OpenCV was built to provide a common infrastructure for computer vision
-                            applications
-                            and to accelerate the use of machine perception in commercial products.<sup id="cite_ref-2"
-                                class="reference"><a href="https://opencv.org/about">[3]</a></sup>
+                        <p>We utilize the OpenCV (Open Source Computer Vision Library) library to manipulate the pictures 
+                            in order to extract some useful information from them. We can reduce noises as well as control 
+                            the brightness and color contrast. OpenCV  is an open source computer vision and machine learning 
+                            software library. OpenCV was built to provide a common infrastructure for computer vision 
+                            applications and to accelerate the use of machine perception in commercial products.<sup id="cite_ref-2" 
+                            class="reference"><a href="https://opencv.org/about">[1]</a></sup>
                             <a href="https://docs.opencv.org/master/">OpenCV documentation can be found here.</a>
                         </p>
 
@@ -98,12 +97,10 @@
                     </div>
                     <div class="col-lg-12 text-left">
                         <p>Images come with many different lighting conditions; some images are very dark and difficult
-                            to
-                            visualize. We decided to convert the images to gray scale for better visualization. A
-                            grayscale
-                            is simple. It represents images and morphologies by the intensity of black and white, which
-                            means it has only one channel. To see images in grayscale, we need to convert the color mode
-                            into gray.</p>
+                            to visualize. We decided to convert the images to gray scale for better visualization. A
+                            grayscale is simple. It represents images and morphologies by the intensity of black and
+                            white, which means it has only one channel. To see images in grayscale, we need to convert
+                            the color mode into gray.</p>
                     </div>
                     <div class="col-lg-12 text-center">
                         <img src="../static/images/original_images.png" alt="">
@@ -117,12 +114,9 @@
                         <br>
                     </div>
                     <div class="col-lg-12 text-left">
-                        <br>
                         <p>Many images have unnecessary and uninformative black areas/borders. We decided to remove
-                            these
-                            areas with cropping by removing them from the images if the pixel darkness exceeds a
-                            tolerance value
-                            of 7.</p>
+                            these areas with cropping by removing them from the images if the pixel darkness exceeds a
+                            tolerance value of 7.</p>
                     </div>
                     <div class="col-lg-12 text-center">
                         <img src="../static/images/crop_images.png" alt="">
@@ -137,16 +131,12 @@
                     <div class="col-lg-12 text-left">
                         <p>When it comes to detecting edges and contours, noise gives a great impact on the accuracy of
                             detection. Therefore, removing noises and controlling the intensity of the pixel values can
-                            help
-                            the model to focus on the general details and get higher accuracy. Blurring is one technique
-                            we
-                            can use for this purpose. Ideally, we need to find an adequate amount of blurring without
-                            losing
-                            desirable edges. <a data-toggle="modal" href="#gaussianBlur">Gaussian filtering</a> is
-                            highly
-                            effective in removing Gaussian noise from the image. <sup id="cite_ref-2"
+                            help the model to focus on the general details and get higher accuracy. Blurring is one
+                            technique we can use for this purpose. Ideally, we need to find an adequate amount of blurring without
+                            losing desirable edges. <a data-toggle="modal" href="#gaussianBlur">Gaussian filtering</a>
+                            is highly effective in removing Gaussian noise from the image. <sup id="cite_ref-2"
                                 class="reference"><a
-                                    href="https://www.tutorialkart.com/opencv/python/opencv-python-gaussian-image-smoothing/">[4]</a></sup>
+                                    href="https://www.tutorialkart.com/opencv/python/opencv-python-gaussian-image-smoothing/">[2]</a></sup>
                         </p>
                     </div>
                     <div class="col-lg-12 text-center">
@@ -199,11 +189,10 @@
     </div>
     <!-- end modal code -->
 
-
     <!-- java script libraries -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
-    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/3.0.3/dc.min.js"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
@@ -212,6 +201,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
+  
+
 
 </body>
 
