--- a/templates/model.html
+++ b/templates/model.html
@@ -105,12 +105,17 @@
               <!-- a more detailed diagram of the model can be found <a href="../static/images/model.png">here</a>. -->
               a more detailed diagram of the model can be found <a data-toggle="modal" href="#fullmodel">here</a>.
               
-              Often the hidden layers of a CNN consist of <a href="../static/images/conv_process.png">3 operations</a>; Convolution, Activation and Pooling.
+              Often the hidden layers of a CNN consist of <a href="../static/images/conv_process.jpg">3 operations</a>; Convolution, Activation and Pooling.
               Due to overfitting issues we also added Dropout to each hidden layer of our model.
           </p>
 
-          <img src="../static/images/model_diagram.png" height="400" alt="">
-          <br><br>
+          <br>
+          <div class="col-lg-12 text-center">
+              <img src="../static/images/model_diagram.png" height="400" alt="">
+          </div>
+          <br>
+          
+
           <p>
 
             <ul>
@@ -187,24 +192,19 @@
          </div>
 
 
+         <br>
+         <div class="col-lg-12 text-center">
+            <img src="../static/images/accuracy.png" height="350" alt="">
+            <img src="../static/images/loss.png" height="350" alt="">
+         </div>
+         <br>
+         <br>
+         <div class="col-lg-12 text-center">
+            <img src="../static/images/norm_cm.png" height="400" alt="">
+         </div>
+         <br>
 
 
-
-              <div class="row"> 
-                    <div class="column">
-                      <img src="../static/images/accuracy.png" height="350" alt="">
-                      <img src="../static/images/loss.png" height="350" alt="">
-                    </div>
-              </div>
-              <br><br><br>
-              <div class="row"> 
-                    <div class="column">
-                      <!-- <img src="../static/images/cm.png" height="400" alt=""> -->
-                      <img src="../static/images/norm_cm.png" height="400" alt="">
-                    </div>
-              </div>
-
-              <br><br>
               <div class="col-lg-12 text-left">
               <p>
                   <br>
