move title in image.html

--- a/templates/image.html
+++ b/templates/image.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Image Processing</title>
+    <title>Blindness Detection App</title>
     <link rel="shortcut icon" href="../static/images/DR_Logo.png" />
     <!-- Style Sheets-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -62,7 +62,7 @@
         <div class="overlay"></div>
         <div class="inner">
             <h1><span>Classification of Diabetic Retinopathy Severity </span></h1>
-            <h3 class="h3-white"> Detect blindness before it happens</h3>
+            <h3 class="h3-white">Image Processing</h3>
         </div>
     </div>
 
@@ -70,18 +70,14 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <br>
-                    <h3 style="color: Black" class="section-heading text-uppercase">Image Processing</h3>
-                    <br>
                     <div class="col-lg-12 text-left">
                         <h3 class="section-subheading text-muted">OpenCV library</h3>
                         <br>
                     </div>
                     <div class="col-lg-12 text-left">
-                        <p>We utilize the OpenCV (Open Source Computer Vision Library) library to manipulate the pictures 
+                        <p>We utilize the OpenCV (Open Source Computer Vision) library to manipulate the pictures 
                             in order to extract some useful information from them. We can reduce noises as well as control 
-                            the brightness and color contrast. OpenCV  is an open source computer vision and machine learning 
+                            the brightness and color contrast. OpenCV is an open source computer vision and machine learning 
                             software library. OpenCV was built to provide a common infrastructure for computer vision 
                             applications and to accelerate the use of machine perception in commercial products.<sup id="cite_ref-2" 
                             class="reference"><a href="https://opencv.org/about">[1]</a></sup>
@@ -142,8 +138,6 @@
                     <div class="col-lg-12 text-center">
                         <img src="../static/images/blurred_resize.png" alt="">
                     </div>
-                </div>
-                <br>
             </div>
     </section>
 
