--- a/templates/model.html
+++ b/templates/model.html
@@ -125,8 +125,8 @@
                 <br>
 
                 <li><a href="https://en.wikipedia.org/wiki/Rectifier_(neural_networks)">Activation: </a>We use a RELU activation
-                        after each convolution. RELU function keeps the positive elements of an array and
-                        and substitutes the negative elements with 0s, only the activated features are carried forward into the next layer.</li>
+                        after each convolution. RELU function keeps the positive elements of an array and substitutes
+                         the negative elements with 0s, only the activated features are carried forward into the next layer.</li>
                 <br>
                 
                 <li><a data-toggle="modal" href="#maxpooling">Pooling: </a>Pooling simplifies the output by performing downsampling,
