cleanup; add masking to image.html

--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -128,7 +128,7 @@
                       retinopathy but is a rather subjective diagnosis.
                     </p>
                     <p>Typically, preproliferative retinopathy will consist of multiple cotton wool spots, multiple dot
-                      and blot haemorrhages, venous changes and intra-retinal microvascular abnormalities.
+                      and blot hemorrhages, venous changes and intra-retinal microvascular abnormalities.
                       <sup id="cite_ref-2" class="reference"><a
                           href="http://www.glycosmedia.com/education/diabetic-retinopathy/diabetic-retinopathy-features-of-diabetes-microaneurysms/">[2]</a></sup>
                     </p>
