--- a/templates/image.html
+++ b/templates/image.html
@@ -70,74 +70,84 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                    <div class="col-lg-12 text-left">
-                        <h3 class="section-subheading text-muted">OpenCV library</h3>
-                        <br>
-                    </div>
-                    <div class="col-lg-12 text-left">
-                        <p>We utilize the OpenCV (Open Source Computer Vision) library to manipulate the pictures 
-                            in order to extract some useful information from them. We can reduce noises as well as control 
-                            the brightness and color contrast. OpenCV is an open source computer vision and machine learning 
-                            software library. OpenCV was built to provide a common infrastructure for computer vision 
-                            applications and to accelerate the use of machine perception in commercial products.<sup id="cite_ref-2" 
-                            class="reference"><a href="https://opencv.org/about">[1]</a></sup>
-                            <a href="https://docs.opencv.org/master/">OpenCV documentation can be found here.</a>
-                        </p>
+                <div class="col-lg-12 text-left">
+                    <h3 class="section-subheading text-muted">OpenCV library</h3>
+                    <br>
+                </div>
+                <div class="col-lg-12 text-left">
+                    <p>We utilize the OpenCV (Open Source Computer Vision) library to manipulate the pictures
+                        in order to extract some useful information from them. We can reduce noises as well as control
+                        the brightness and color contrast. OpenCV is an open source computer vision and machine learning
+                        software library. OpenCV was built to provide a common infrastructure for computer vision
+                        applications and to accelerate the use of machine perception in commercial products.<sup
+                            id="cite_ref-2" class="reference"><a href="https://opencv.org/about">[1]</a></sup>
+                        <a href="https://docs.opencv.org/master/">OpenCV documentation can be found here.</a>
+                    </p>
 
-                    </div>
+                </div>
+                <br>
+                <div class="col-lg-12 text-left">
                     <br>
-                    <div class="col-lg-12 text-left">
-                        <br>
-                        <h3 class="section-subheading text-muted">Color</h3>
-                        <br>
-                    </div>
-                    <div class="col-lg-12 text-left">
-                        <p>Images come with many different lighting conditions; some images are very dark and difficult
-                            to visualize. We decided to convert the images to gray scale for better visualization. A
-                            grayscale is simple. It represents images and morphologies by the intensity of black and
-                            white, which means it has only one channel. To see images in grayscale, we need to convert
-                            the color mode into gray.</p>
-                    </div>
-                    <div class="col-lg-12 text-center">
-                        <img src="../static/images/original_images.png" alt="">
-                        <img src="../static/images/gray_images.png" alt="">
-                        <br>
-                    </div>
+                    <h3 class="section-subheading text-muted">Color</h3>
                     <br>
-                    <div class="col-lg-12 text-left">
-                        <br>
-                        <h3 class="section-subheading text-muted">Cropping</h3>
-                        <br>
-                    </div>
-                    <div class="col-lg-12 text-left">
-                        <p>Many images have unnecessary and uninformative black areas/borders. We decided to remove
-                            these areas with cropping by removing them from the images if the pixel darkness exceeds a
-                            tolerance value of 7.</p>
-                    </div>
-                    <div class="col-lg-12 text-center">
-                        <img src="../static/images/crop_images.png" alt="">
-                        <br>
-                    </div>
+                </div>
+                <div class="col-lg-12 text-left">
+                    <p>Images come with many different lighting conditions; some images are very dark and difficult
+                        to visualize. We decided to convert the images to gray scale for better visualization. A
+                        grayscale is simple. It represents images and morphologies by the intensity of black and
+                        white, which means it has only one channel. To see images in grayscale, we need to convert
+                        the color mode into gray.</p>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <img src="../static/images/original_images.png" alt="">
+                    <img src="../static/images/gray_images.png" alt="">
                     <br>
-                    <div class="col-lg-12 text-left">
-                        <br>
-                        <h3 class="section-subheading text-muted">Blurring</h3>
-                        <br>
-                    </div>
-                    <div class="col-lg-12 text-left">
-                        <p>When it comes to detecting edges and contours, noise gives a great impact on the accuracy of
-                            detection. Therefore, removing noises and controlling the intensity of the pixel values can
-                            help the model to focus on the general details and get higher accuracy. Blurring is one
-                            technique we can use for this purpose. Ideally, we need to find an adequate amount of blurring without
-                            losing desirable edges. <a data-toggle="modal" href="#gaussianBlur">Gaussian filtering</a>
-                            is highly effective in removing Gaussian noise from the image. <sup id="cite_ref-2"
-                                class="reference"><a
-                                    href="https://www.tutorialkart.com/opencv/python/opencv-python-gaussian-image-smoothing/">[2]</a></sup>
-                        </p>
-                    </div>
-                    <div class="col-lg-12 text-center">
-                        <img src="../static/images/blurred_resize.png" alt="">
-                    </div>
+                </div>
+                <br>
+                <div class="col-lg-12 text-left">
+                    <br>
+                    <h3 class="section-subheading text-muted">Cropping</h3>
+                    <br>
+                </div>
+                <div class="col-lg-12 text-left">
+                    <p>Many images have unnecessary and uninformative black areas/borders. We decided to remove
+                        these areas with cropping by removing them from the images if the pixel darkness exceeds a
+                        tolerance value of 7.</p>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <img src="../static/images/crop_images.png" alt="">
+                    <br>
+                </div>
+                <br>
+                <div class="col-lg-12 text-left">
+                    <br>
+                    <h3 class="section-subheading text-muted">Blurring and Unsharp Masking</h3>
+                    <br>
+                </div>
+                <div class="col-lg-12 text-left">
+                    <p>Since our images come in many sizes, we make things consistent by resizing each image to 224 X
+                        224 pixels.</p>
+                    <p>When it comes to detecting edges and contours, noise gives a great impact on the accuracy of
+                        detection. Therefore, removing noises and controlling the intensity of the pixel values can
+                        help the model to focus on the general details and get higher accuracy. Blurring is one
+                        technique we can use for this purpose. Ideally, we need to find an adequate amount of blurring
+                        without
+                        losing desirable edges. <a data-toggle="modal" href="#gaussianBlur">Gaussian filtering</a>
+                        is highly effective in removing Gaussian noise from the image. <sup id="cite_ref-2"
+                            class="reference"><a
+                                href="https://www.tutorialkart.com/opencv/python/opencv-python-gaussian-image-smoothing/">[2]</a></sup>
+                    </p>
+                    <p>We then use this blurred image to create a "mask". The blurring technique surpressed most of the
+                        high frequency components. We can now apply an OpenCV function which uses a weighted average of
+                        the original image and the blurred image. This essentially results in an output image enhancing
+                        the high frequency components which were blocked by the "mask" (smoothing filter).
+                        <sup id="cite_ref-2" class="reference"><a
+                                href="https://theailearner.com/tag/cv2-addweighted/">[3]</a></sup>
+                    </p>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <img src="../static/images/blurred_resize.png" alt="">
+                </div>
             </div>
     </section>
 
@@ -195,7 +205,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-  
+
 
 
 </body>
