--- a/templates/image.html
+++ b/templates/image.html
@@ -138,7 +138,7 @@
                                 href="https://www.tutorialkart.com/opencv/python/opencv-python-gaussian-image-smoothing/">[2]</a></sup>
                     </p>
                     <p>We then use this blurred image to create a "mask". The blurring technique surpressed most of the
-                        high frequency components. Therefore, when we subract the blurred image from the original image, 
+                        high frequency components. Therefore, when we subtract the blurred image from the original image, 
                         the result is what we are calling a mask. This mask will have most of the high-frequency 
                         components that were blocked by the smoothing filter. Adding the mask back to the original image 
                         will enhance the high frequency components. OpenCV has a function which uses a weighted average 
