minor html & Flask route changes

--- a/templates/image.html
+++ b/templates/image.html
@@ -32,8 +32,8 @@
                         App</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/Prevalence_Facts"
-                        onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Prevalence Facts</a>
+                    <a class="nav-link " href="/Facts"
+                        onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Facts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="/Image_Processing"
