--- a/templates/image.html
+++ b/templates/image.html
@@ -135,7 +135,7 @@
                     <div class="col-lg-12 text-center">
                             <img src="../static/images/g_blurred.png" alt="">
                     </div>
-                    <p>We then use this blurred image to create a "mask". Since the blurring technique surpressed most of the
+                    <p>We then use this blurred image to create a "mask". Since the blurring technique suppressed most of the
                         high frequency components, when we subtract the blurred image from the original image, 
                         the result is what we call a mask. This mask will have most of the high-frequency 
                         components that were blocked by the smoothing filter. Adding the mask back to the original image 
